--- a/ui.html
+++ b/ui.html
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409337/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6409337</a></h5> 
+<h5><a href='https://www.greatinsurancejobs.com/job/6409337/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6409337</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/assistant-nurse-manager-5633'>Assistant Nurse Manager - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/assistant-nurse-manager-5633'>Assistant Nurse Manager - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5632/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5632/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-digestive-health-center-procedure-suite-5640'>Staff Nurse -Digestive Health Center Procedure Suite - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-digestive-health-center-procedure-suite-5640'>Staff Nurse -Digestive Health Center Procedure Suite - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -222,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199116?bpin=1046&com=2&rin=1467367'>Job Profile - Senior UI Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199116?bpin=1046&com=2&rin=1467367'>Job Profile - Senior UI Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -278,7 +278,7 @@
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -286,7 +286,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
+<h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -298,11 +298,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -406,7 +406,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
